# SpatialPointIndex

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cmake_build_debug.sh
data/: points.txt
example/: CMakeLists.txt
include/: GridIndex.h  Point.h  PointManager.h
lib/: CMakeLists.txt  GridIndex.cpp  Point.cpp  PointManager.cpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_1.cpp  test_2.cpp
test/sub_foo/: sub_test_1.cpp
